--- a/src/index.css
+++ b/src/index.css
@@ -10,16 +10,16 @@
   
   @font-face {
     font-family: 'Belanosima-Regular';
-    src: url('./assets/fonts/Belanosima-Regular.woff2');
+    src: url('../public/fonts/Belanosima-Regular.woff2');
   }
   
   @font-face {
     font-family: 'Belanosima-Bold';
-    src: url('./assets/fonts/Belanosima-Bold.woff2');
+    src: url('../public/fonts/Belanosima-Bold.woff2');
   }
   
   @font-face {
     font-family: 'Belanosima-SemiBold';
-    src: url('./assets/fonts/Belanosima-SemiBold.woff2');
+    src: url('../public/fonts/Belanosima-SemiBold.woff2');
   }
 }
