./src/components/Registe/Regiter.tsx: MOD
initial register page layout

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   html {
     @apply bg-[#24262e]
   }
+
+  .input {
+    @apply font-belanosima
+  }
   
   @font-face {
     font-family: 'Belanosima-Regular';
