--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,8 @@
   .task-inputs {
     @apply font-belanosima bg-transparent w-[16rem] p-2 border-2 border-dashed border-slate-600 rounded-md outline-none focus:border-white focus:border-solid  transition duration-150
   }
+
+  .addIcon {
+    fill: white;
+  }
 }
